# recon-village-2025-defcon33-decisym

./: .gitignore  Cargo.toml  README.md
analysis/: recon_village_2025_speakers.hdt  recon_village_2025_speakers.hdt.index.v1-rust-cache  speakers_affiliations_foaf.ttl  speakers_list.csv  speakers_list_enriched.csv  wikidata_security_companies.hdt  wikidata_security_companies.hdt.index.v1-rust-cache
analysis/queries/: find_speaker_companies_in_wikidata.rq  list_all_speakers.rq  match_companies.rq  search_microsoft.rq  security_companies_by_industry.rq  speakers_by_company.rq  speakers_by_company_age.rq  speakers_company_details.rq
case_study_output/: recon_village.html  security_companies.ttl  speakers.json  speakers_foaf.ttl
examples/: README.md  chat.yaml  completion.json  completion.yaml  defcon_case_study.rs  extract_speakers.yaml  vllm_server.sh
slides/: .gitignore  collect-help.txt  create_images.sh  install_atkinson_hyperlegible.sh  install_museo.sh  slides.tex
src/: download.rs  lib.rs  main.rs  openai_client.rs
tests/: README.md  unit_tests.rs  wikidata_download.rs
tests/data/: README.md  speaker_section.html
