[package]
name = "decisym_defcon33"
version = "0.1.0"
edition = "2024"

[dependencies]
arti-client = { version = "0.22", features = ["static-sqlite"] }
tor-rtcompat = "0.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
url = "2.5"
native-tls = "0.2"
tokio-native-tls = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
playwright = { version = "0.0.20" }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
csv = "1.3"
tempfile = "3.8"

